package ar.edu.utn.frc.tup.lciii.models;

public enum MatchStatus {

    STARTED, FINISHED, CANCELED;
}
