package ar.edu.utn.frc.tup.lciii.models.rps;

public enum ShapeHand {

    ROCK, PAPER, SCISSORS;
}
